--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>RoboEdu</title>
+    <title>CSAA Summer Camp</title>
   </head>
   <body style="margin:0px;overflow-x: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
